tests/invalid/fstring_dict_unsupported/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 2}
    out: str = f"{d}"


if __name__ == "__main__":
    run_case()
